# RanOptics3D

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  RanOptics3D.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
assets/stylesheets/: extra.css
changelog/: index.html
docs/: changelog.md  examples.md  index.md
docs/guide/: getting-started.md  gui-walkthrough.md  navigation.md  twiss-inspector.md  viewer.md
docs/reference/: backends.md  element-colors.md  known-issues.md  magnet-size-file.md
docs/stylesheets/: extra.css
examples/: elegant_example.py  index.html  madx_example.py  tao_example.py
guide/getting-started/: index.html
guide/gui-walkthrough/: index.html
guide/navigation/: index.html
guide/twiss-inspector/: index.html
guide/viewer/: index.html
ranoptics3d/: __init__.py  __main__.py  _aperture.py  _elements.py  _geometry.py  _gui.py  _mesh.py  _plot.py  cli.py
ranoptics3d/_backends/: __init__.py  elegant.py  madx.py  tao.py  xsuite.py
ranoptics3d/_panel/: builder.py  control.js  panel_template.html
reference/backends/: index.html
reference/element-colors/: index.html
reference/known-issues/: index.html
reference/magnet-size-file/: index.html
search/: search_index.json
